--- a/src/pages/homePage/HomePage.module.css
+++ b/src/pages/homePage/HomePage.module.css
@@ -41,4 +41,14 @@
   line-height: 24px;
   color: #ffffff;
   text-align: center;
+  transition: var(--transition);
+}
+
+.button:hover {
+  cursor: pointer;
+  background: black;
+  transform: scale(1.02);
+  border: 1px solid var(--main-red);
+  background-color: rgba(255, 255, 255, 0.445);
+  color: var(--main-red);
 }
