--- a/public/styles.css
+++ b/public/styles.css
@@ -19,3 +19,26 @@ body {
   margin: 0;
   padding: 0;
 }
+
+input {
+  color: rgb(0, 0, 0);
+  font-family: "Helvetica Neue";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  padding-left: 17px;
+}
+
+::placeholder {
+  color: rgba(0, 0, 0, 0.397);
+  font-family: "Helvetica Neue";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+}
+
+input[type="file"] {
+  display: none;
+}
