--- a/src/pages/homePage/HomePage.module.css
+++ b/src/pages/homePage/HomePage.module.css
@@ -46,9 +46,17 @@
 
 .button:hover {
   cursor: pointer;
-  background: black;
   transform: scale(1.02);
   border: 1px solid var(--main-red);
   background-color: rgba(255, 255, 255, 0.445);
   color: var(--main-red);
+}
+
+.seal {
+  position: absolute;
+  width: 299px;
+  height: 299px;
+  left: 1076px;
+  top: 473px;
+  opacity: 0.8;
 }
