--- a/public/styles.css
+++ b/public/styles.css
@@ -39,6 +39,17 @@ input {
   line-height: 21px;
 }
 
+textarea {
+  padding-left: 17px;
+  padding-top: 10px;
+  color: rgb(0, 0, 0);
+  font-family: "Helvetica Neue";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+}
+
 input[type="file"] {
   display: none;
 }
