--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -1,4 +1,12 @@
-.titlelSection {
+.wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.titlelSection,
+.employerlSection {
   display: flex;
   flex-direction: column;
   gap: 7px;
@@ -21,7 +29,15 @@
   height: 20px;
   width: 20px;
   position: absolute;
-  top: 42px;
+  top: 39px;
+  left: 730px;
+}
+
+.checkMarkLongEmployer {
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  top: 172px;
   left: 730px;
 }
 
@@ -46,5 +62,5 @@
   width: 768px;
   height: 1px;
   left: 0;
-  top: 130px;
+  top: 260px;
 }
