implemented views for date inputs and synced them with local storage

--- a/public/styles.css
+++ b/public/styles.css
@@ -54,3 +54,11 @@ textarea {
 input[type="file"] {
   display: none;
 }
+
+input[type="date"] {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  color: rgba(0, 0, 0, 0.6);
+}
