--- a/src/pages/experiencePage/ExperiencePage.module.css
+++ b/src/pages/experiencePage/ExperiencePage.module.css
@@ -15,7 +15,7 @@
   flex-basis: 100%;
   flex: 1;
   height: fit-content;
-  padding-bottom: 260px;
+  padding-bottom: 360px;
   background-color: #292c2d03;
 }
 
@@ -86,7 +86,7 @@
   width: 289px;
   height: 48px;
   left: calc(50% - 289px / 2 - 664.5px);
-  bottom: 70px;
+  bottom: 160px;
   background: #62a1eb;
   border-radius: 4px;
   font-style: normal;
@@ -104,4 +104,61 @@
   border: 1px solid var(--main-red);
   background-color: transparent;
   color: var(--main-red);
+}
+
+.backBtn {
+  position: absolute;
+  width: 110px;
+  height: 48px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0.08em;
+  color: #ffffff;
+  bottom: 40px;
+  left: calc(50% - 289px / 2 - 664.5px);
+  border: none;
+  background: #6b40e3;
+  border-radius: 4px;
+  transition: var(--transition);
+}
+
+.backBtn:hover {
+  cursor: pointer;
+  transform: scale(1.02);
+  border: 1px solid var(--main-red);
+  background-color: transparent;
+  color: var(--main-red);
+}
+
+.nextBtn {
+  position: absolute;
+  width: 170px;
+  height: 48px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0.08em;
+  color: #ffffff;
+  bottom: 45px;
+  left: 748px;
+  border: none;
+  background: #6b40e3;
+  border-radius: 4px;
+  transition: var(--transition);
+}
+
+.nextBtn:hover {
+  cursor: pointer;
+  transform: scale(1.02);
+  border: 1px solid var(--main-red);
+  background-color: transparent;
+  color: var(--main-red);
+}
+
+.nextBtn:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
 }
