added logic for dynamic validation to cover all Experience components

--- a/src/pages/experiencePage/ExperiencePage.module.css
+++ b/src/pages/experiencePage/ExperiencePage.module.css
@@ -150,7 +150,7 @@
   transition: var(--transition);
 }
 
-.nextBtn:hover {
+.nextBtn:enabled:hover {
   cursor: pointer;
   transform: scale(1.02);
   border: 1px solid var(--main-red);
