--- a/src/components/cv/Cv.module.css
+++ b/src/components/cv/Cv.module.css
@@ -33,33 +33,26 @@
 .emailIcon {
   height: 20px;
   width: 20px;
-  position: absolute;
-  left: 85px;
-  top: 125px;
+  margin-left: 85px;
 }
 
 .email {
-  position: absolute;
-  left: 115px;
-  top: 125px;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
   color: #1a1a1a;
+  margin-left: 12px;
 }
 
 .phoneIcon {
   height: 20px;
   width: 20px;
-  position: absolute;
-  left: 85px;
-  top: 160px;
+  margin-left: 85px;
 }
 
 .phone {
-  position: absolute;
-  left: 115px;
+  margin-left: 12px;
   top: 160px;
   font-style: normal;
   font-weight: 400;
@@ -69,9 +62,8 @@
 }
 
 .aboutTitle {
-  left: 85px;
-  top: 220px;
-  position: absolute;
+  margin-left: 85px;
+  margin-top: 20px;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
@@ -83,17 +75,16 @@
   font-size: 16px;
   line-height: 22px;
   color: #000000;
-  left: 85px;
-  top: 252px;
-  position: absolute;
-  width: 450px;
+  margin-left: 85px;
+  margin-top: 15px;
+  word-wrap: break-word;
 }
 
 .image {
   position: absolute;
   width: 260px;
   height: 260px;
-  left: 685px;
+  right: 100px;
   top: 48px;
   border-radius: 133px;
 }
