--- a/src/components/cv/Cv.module.css
+++ b/src/components/cv/Cv.module.css
@@ -88,3 +88,45 @@
   top: 48px;
   border-radius: 133px;
 }
+
+.divider {
+  width: 760px;
+  height: 0.5px;
+  margin-left: 85px;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+.title {
+  margin-left: 85px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #1a1a1a;
+}
+
+.employer {
+  display: inline;
+  font-size: 16px;
+  line-height: 20px;
+  color: #1a1a1a;
+}
+
+.dates {
+  margin-left: 85px;
+  margin-top: 8px;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #919191;
+}
+
+.description {
+  word-wrap: break-word;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  margin-left: 85px;
+  margin-top: 10px;
+}
