--- a/src/components/cv/Cv.module.css
+++ b/src/components/cv/Cv.module.css
@@ -1,11 +1,3 @@
-/* .footLogo {
-  position: absolute;
-  width: 42px;
-  height: 42px;
-  left: 85px;
-  bottom: 100px;
-} */
-
 .name {
   margin-top: 68px;
   margin-left: 85px;
@@ -129,4 +121,13 @@
   line-height: 22px;
   margin-left: 85px;
   margin-top: 10px;
+}
+
+.footLogo {
+  width: 42px;
+  height: 42px;
+  position: absolute;
+  bottom: -100px;
+  margin-left: 85px;
+  margin-top: 40px;
 }
