--- a/public/styles.css
+++ b/public/styles.css
@@ -71,3 +71,11 @@ textarea:focus {
   outline: none !important;
   box-shadow: 0 0 10px #719ece56;
 }
+
+select {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  color: rgb(0, 0, 0);
+}
