--- a/src/components/education/Education.module.css
+++ b/src/components/education/Education.module.css
@@ -148,22 +148,34 @@
   position: absolute;
   top: 49px;
   right: 0px;
-  width: 338px;
+  width: 355px;
   background-color: #ffffff;
   border-radius: 5px;
   z-index: 2;
-  padding: 2px;
+  /* padding: 2px; */
   box-shadow: 1px 3px 7px -3px rgba(0, 0, 0, 0.6);
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 21px;
   color: #1a1a1a;
-  padding-left: 15px;
-  padding-top: 8px;
+  /* padding-left: 15px; */
+  /* padding-top: 8px; */
   margin-top: 1px;
 }
 
 .option {
-  padding: 10px;
+  /* padding: 10px;
+  padding-left: 25px; */
+  padding: 15px 10px 15px 25px;
+  opacity: 0.8;
+  transition: all 0.1s ease-in-out;
+}
+
+.option:hover {
+  cursor: pointer;
+  border-radius: 6px;
+  opacity: 1;
+  transform: scale(1.01);
+  background-color: rgba(128, 128, 128, 0.144);
 }
