--- a/src/components/education/Education.module.css
+++ b/src/components/education/Education.module.css
@@ -169,13 +169,12 @@
   padding-left: 25px; */
   padding: 15px 10px 15px 25px;
   opacity: 0.8;
-  transition: all 0.1s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .option:hover {
   cursor: pointer;
-  border-radius: 6px;
+  border-radius: 1px;
   opacity: 1;
-  transform: scale(1.01);
-  background-color: rgba(128, 128, 128, 0.144);
+  background-color: #c3dcee;
 }
