--- a/src/pages/personalPage/PersonalPage.module.css
+++ b/src/pages/personalPage/PersonalPage.module.css
@@ -91,8 +91,8 @@
   height: 20px;
   width: 20px;
   position: absolute;
-  top: 325px;
-  left: 520px;
+  top: 327px;
+  left: 512px;
 }
 
 .nameSection {
@@ -199,13 +199,13 @@
 .photoName {
   max-width: 448px;
   position: absolute;
-  left: 510px;
+  left: 545px;
   top: 324px;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
   line-height: 22px;
-  color: #0e80bf;
+  color: #98e37e;
 }
 
 .photoButton {
