--- a/src/components/cv/Cv.module.css
+++ b/src/components/cv/Cv.module.css
@@ -1,6 +1,5 @@
 .name {
   margin-top: 68px;
-  margin-left: 85px;
 
   font-style: normal;
   font-weight: 700;
@@ -98,14 +97,16 @@
 }
 
 .title {
-  margin-left: 85px;
+  display: inline-block;
   font-size: 17px;
   line-height: 20px;
   color: #1a1a1a;
 }
 
 .employer {
-  display: inline;
+  /* display: inline; */
+  display: inline-block;
+  margin-left: 6px;
   font-size: 17px;
   line-height: 20px;
   color: #1a1a1a;
