--- a/src/components/education/Education.module.css
+++ b/src/components/education/Education.module.css
@@ -142,6 +142,14 @@
 
 .selectedOption {
   padding: 10px;
+  cursor: pointer;
+}
+.dropDown {
+  height: 8px;
+  position: absolute;
+  top: 18px;
+  left: 322px;
+  background-color: white;
 }
 
 .optionsContainer {
